--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,18 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <p class="navbar-text float-right">
+      <% if member_signed_in? %>
+        Logged in as <strong><%= current_member.email %></strong>.
+        <%= link_to 'Edit profile', edit_member_registration_path, :class => 'navbar-link' %> |
+        <%= link_to "Logout", destroy_member_session_path, method: :delete, :class => 'navbar-link'  %>
+      <% else %>
+        <%= link_to "Sign up", new_member_registration_path, :class => 'navbar-link'  %> |
+        <%= link_to "Login", new_member_session_path, :class => 'navbar-link'  %>
+      <% end %>
+    </p>
+    <ul class="navbar-nav mr-auto">
+    </ul>
   </head>
 
   <body>
